# edudocs-ai-agent-oci

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt
apps/api/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: __init__.py  citations.py  graph.py  nodes.py  prompts.py  service.py  state.py
apps/api/app/api/: routes.py  schemas.py
apps/api/app/core/: __init__.py  config.py  errors.py
apps/api/app/documents/: __init__.py  manifest.py  pdf.py
apps/api/app/evaluation/: __init__.py  cli.py  dataset.py  metrics.py  models.py  report.py  runner.py
apps/api/app/ingestion/: __init__.py  chunking.py  cli.py  embeddings.py  index.py  normalization.py  provider_factory.py
apps/api/app/providers/: __init__.py  base.py  factory.py  fake.py  groq.py
apps/api/app/retrieval/: __init__.py  search.py
apps/api/tests/: test_agent_chat.py  test_ci_scripts.py  test_evaluation.py  test_pipeline.py  test_project_audit.py  test_readme_check.py  test_readme_evidence.py  test_terraform_policy.py
corpus/: manifest.json
docs/: architecture.md  ci-cd.md  corpus.md  cost-controls.md  delivery-plan.md  deployment-oci.md  evaluation-report.md  local-development.md  pre-terraform-audit.md  project-facts.json  rag-pipeline.md  screenshot-guide.md  security.md
scripts/: audit_project_readiness.py  check_readme.py  check_repository_hygiene.py  check_terraform_policy.py  check_utf8.py  smoke_test.py  (+5 more)
(+53 files in other folders)
