[project]
name = "edudocs-ai-api"
version = "0.1.0"
description = "API e pipeline de ingestão do EduDocs AI"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.115,<0.116",
  "httpx>=0.27,<0.29",
  "numpy>=1.26,<2.0",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "PyMuPDF==1.28.0",
  "scikit-learn>=1.4,<1.7",
  "uvicorn>=0.30,<0.35",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=3.0,<4",
]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.8,<0.14",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
